Print and display tranformation matrix

--- a/UR5Transformation.ipynb
+++ b/UR5Transformation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,8 +96,79 @@
     "                [sp.sin(q6), 0, -sp.cos(q6), 0],\n",
     "                [0, 1, 0, d[5]],\n",
     "                [0, 0, 0, 1]])\n",
-    "#T6= T6.subs({q1: math.radians(90), q2: math.radians(0), q3: math.radians(0), q4: math.radians(-90), q5: math.radians(0), q6: math.radians(0), q7: math.radians(0)})\n",
-    "T = (T0*T1*T2*T3*T4*T5*T6)"
+    "#T6= T6.subs({q1: math.radians(90), q2: math.radians(0), q3: math.radians(0), q4: math.radians(-90), q5: math.radians(0), q6: math.radians(0), q7: math.radians(0)})\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Final Transformation Matrix:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\left(\\left(\\sin{\\left(q_{2} \\right)} \\sin{\\left(q_{4} \\right)} \\cos{\\left(q_{1} \\right)} + \\cos{\\left(q_{1} \\right)} \\cos{\\left(q_{2} \\right)} \\cos{\\left(q_{4} \\right)}\\right) \\cos{\\left(q_{5} \\right)} - \\sin{\\left(q_{1} \\right)} \\sin{\\left(q_{5} \\right)}\\right) \\cos{\\left(q_{6} \\right)} + \\left(- \\sin{\\left(q_{2} \\right)} \\cos{\\left(q_{1} \\right)} \\cos{\\left(q_{4} \\right)} + \\sin{\\left(q_{4} \\right)} \\cos{\\left(q_{1} \\right)} \\cos{\\left(q_{2} \\right)}\\right) \\sin{\\left(q_{6} \\right)} & - \\left(\\sin{\\left(q_{2} \\right)} \\sin{\\left(q_{4} \\right)} \\cos{\\left(q_{1} \\right)} + \\cos{\\left(q_{1} \\right)} \\cos{\\left(q_{2} \\right)} \\cos{\\left(q_{4} \\right)}\\right) \\sin{\\left(q_{5} \\right)} - \\sin{\\left(q_{1} \\right)} \\cos{\\left(q_{5} \\right)} & \\left(\\left(\\sin{\\left(q_{2} \\right)} \\sin{\\left(q_{4} \\right)} \\cos{\\left(q_{1} \\right)} + \\cos{\\left(q_{1} \\right)} \\cos{\\left(q_{2} \\right)} \\cos{\\left(q_{4} \\right)}\\right) \\cos{\\left(q_{5} \\right)} - \\sin{\\left(q_{1} \\right)} \\sin{\\left(q_{5} \\right)}\\right) \\sin{\\left(q_{6} \\right)} - \\left(- \\sin{\\left(q_{2} \\right)} \\cos{\\left(q_{1} \\right)} \\cos{\\left(q_{4} \\right)} + \\sin{\\left(q_{4} \\right)} \\cos{\\left(q_{1} \\right)} \\cos{\\left(q_{2} \\right)}\\right) \\cos{\\left(q_{6} \\right)} & - 0.0823 \\left(\\sin{\\left(q_{2} \\right)} \\sin{\\left(q_{4} \\right)} \\cos{\\left(q_{1} \\right)} + \\cos{\\left(q_{1} \\right)} \\cos{\\left(q_{2} \\right)} \\cos{\\left(q_{4} \\right)}\\right) \\sin{\\left(q_{5} \\right)} - 0.0823 \\sin{\\left(q_{1} \\right)} \\cos{\\left(q_{5} \\right)} + 0.10915 \\sin{\\left(q_{1} \\right)} + 0.09465 \\sin{\\left(q_{2} \\right)} \\cos{\\left(q_{1} \\right)} \\cos{\\left(q_{4} \\right)} - 0.09465 \\sin{\\left(q_{4} \\right)} \\cos{\\left(q_{1} \\right)} \\cos{\\left(q_{2} \\right)}\\\\\\left(\\left(\\sin{\\left(q_{1} \\right)} \\sin{\\left(q_{2} \\right)} \\sin{\\left(q_{4} \\right)} + \\sin{\\left(q_{1} \\right)} \\cos{\\left(q_{2} \\right)} \\cos{\\left(q_{4} \\right)}\\right) \\cos{\\left(q_{5} \\right)} + \\sin{\\left(q_{5} \\right)} \\cos{\\left(q_{1} \\right)}\\right) \\cos{\\left(q_{6} \\right)} + \\left(- \\sin{\\left(q_{1} \\right)} \\sin{\\left(q_{2} \\right)} \\cos{\\left(q_{4} \\right)} + \\sin{\\left(q_{1} \\right)} \\sin{\\left(q_{4} \\right)} \\cos{\\left(q_{2} \\right)}\\right) \\sin{\\left(q_{6} \\right)} & - \\left(\\sin{\\left(q_{1} \\right)} \\sin{\\left(q_{2} \\right)} \\sin{\\left(q_{4} \\right)} + \\sin{\\left(q_{1} \\right)} \\cos{\\left(q_{2} \\right)} \\cos{\\left(q_{4} \\right)}\\right) \\sin{\\left(q_{5} \\right)} + \\cos{\\left(q_{1} \\right)} \\cos{\\left(q_{5} \\right)} & \\left(\\left(\\sin{\\left(q_{1} \\right)} \\sin{\\left(q_{2} \\right)} \\sin{\\left(q_{4} \\right)} + \\sin{\\left(q_{1} \\right)} \\cos{\\left(q_{2} \\right)} \\cos{\\left(q_{4} \\right)}\\right) \\cos{\\left(q_{5} \\right)} + \\sin{\\left(q_{5} \\right)} \\cos{\\left(q_{1} \\right)}\\right) \\sin{\\left(q_{6} \\right)} - \\left(- \\sin{\\left(q_{1} \\right)} \\sin{\\left(q_{2} \\right)} \\cos{\\left(q_{4} \\right)} + \\sin{\\left(q_{1} \\right)} \\sin{\\left(q_{4} \\right)} \\cos{\\left(q_{2} \\right)}\\right) \\cos{\\left(q_{6} \\right)} & - 0.0823 \\left(\\sin{\\left(q_{1} \\right)} \\sin{\\left(q_{2} \\right)} \\sin{\\left(q_{4} \\right)} + \\sin{\\left(q_{1} \\right)} \\cos{\\left(q_{2} \\right)} \\cos{\\left(q_{4} \\right)}\\right) \\sin{\\left(q_{5} \\right)} + 0.09465 \\sin{\\left(q_{1} \\right)} \\sin{\\left(q_{2} \\right)} \\cos{\\left(q_{4} \\right)} - 0.09465 \\sin{\\left(q_{1} \\right)} \\sin{\\left(q_{4} \\right)} \\cos{\\left(q_{2} \\right)} + 0.0823 \\cos{\\left(q_{1} \\right)} \\cos{\\left(q_{5} \\right)} - 0.10915 \\cos{\\left(q_{1} \\right)}\\\\\\left(- \\sin{\\left(q_{2} \\right)} \\sin{\\left(q_{4} \\right)} - \\cos{\\left(q_{2} \\right)} \\cos{\\left(q_{4} \\right)}\\right) \\sin{\\left(q_{6} \\right)} + \\left(- \\sin{\\left(q_{2} \\right)} \\cos{\\left(q_{4} \\right)} + \\sin{\\left(q_{4} \\right)} \\cos{\\left(q_{2} \\right)}\\right) \\cos{\\left(q_{5} \\right)} \\cos{\\left(q_{6} \\right)} & - \\left(- \\sin{\\left(q_{2} \\right)} \\cos{\\left(q_{4} \\right)} + \\sin{\\left(q_{4} \\right)} \\cos{\\left(q_{2} \\right)}\\right) \\sin{\\left(q_{5} \\right)} & - \\left(- \\sin{\\left(q_{2} \\right)} \\sin{\\left(q_{4} \\right)} - \\cos{\\left(q_{2} \\right)} \\cos{\\left(q_{4} \\right)}\\right) \\cos{\\left(q_{6} \\right)} + \\left(- \\sin{\\left(q_{2} \\right)} \\cos{\\left(q_{4} \\right)} + \\sin{\\left(q_{4} \\right)} \\cos{\\left(q_{2} \\right)}\\right) \\sin{\\left(q_{6} \\right)} \\cos{\\left(q_{5} \\right)} & - 0.0823 \\left(- \\sin{\\left(q_{2} \\right)} \\cos{\\left(q_{4} \\right)} + \\sin{\\left(q_{4} \\right)} \\cos{\\left(q_{2} \\right)}\\right) \\sin{\\left(q_{5} \\right)} + 0.09465 \\sin{\\left(q_{2} \\right)} \\sin{\\left(q_{4} \\right)} + 0.09465 \\cos{\\left(q_{2} \\right)} \\cos{\\left(q_{4} \\right)} + 0.089159\\\\0 & 0 & 0 & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[((sin(q2)*sin(q4)*cos(q1) + cos(q1)*cos(q2)*cos(q4))*cos(q5) - sin(q1)*sin(q5))*cos(q6) + (-sin(q2)*cos(q1)*cos(q4) + sin(q4)*cos(q1)*cos(q2))*sin(q6), -(sin(q2)*sin(q4)*cos(q1) + cos(q1)*cos(q2)*cos(q4))*sin(q5) - sin(q1)*cos(q5), ((sin(q2)*sin(q4)*cos(q1) + cos(q1)*cos(q2)*cos(q4))*cos(q5) - sin(q1)*sin(q5))*sin(q6) - (-sin(q2)*cos(q1)*cos(q4) + sin(q4)*cos(q1)*cos(q2))*cos(q6), -0.0823*(sin(q2)*sin(q4)*cos(q1) + cos(q1)*cos(q2)*cos(q4))*sin(q5) - 0.0823*sin(q1)*cos(q5) + 0.10915*sin(q1) + 0.09465*sin(q2)*cos(q1)*cos(q4) - 0.09465*sin(q4)*cos(q1)*cos(q2)],\n",
+       "[((sin(q1)*sin(q2)*sin(q4) + sin(q1)*cos(q2)*cos(q4))*cos(q5) + sin(q5)*cos(q1))*cos(q6) + (-sin(q1)*sin(q2)*cos(q4) + sin(q1)*sin(q4)*cos(q2))*sin(q6), -(sin(q1)*sin(q2)*sin(q4) + sin(q1)*cos(q2)*cos(q4))*sin(q5) + cos(q1)*cos(q5), ((sin(q1)*sin(q2)*sin(q4) + sin(q1)*cos(q2)*cos(q4))*cos(q5) + sin(q5)*cos(q1))*sin(q6) - (-sin(q1)*sin(q2)*cos(q4) + sin(q1)*sin(q4)*cos(q2))*cos(q6), -0.0823*(sin(q1)*sin(q2)*sin(q4) + sin(q1)*cos(q2)*cos(q4))*sin(q5) + 0.09465*sin(q1)*sin(q2)*cos(q4) - 0.09465*sin(q1)*sin(q4)*cos(q2) + 0.0823*cos(q1)*cos(q5) - 0.10915*cos(q1)],\n",
+       "[                                                   (-sin(q2)*sin(q4) - cos(q2)*cos(q4))*sin(q6) + (-sin(q2)*cos(q4) + sin(q4)*cos(q2))*cos(q5)*cos(q6),                                  -(-sin(q2)*cos(q4) + sin(q4)*cos(q2))*sin(q5),                                                   -(-sin(q2)*sin(q4) - cos(q2)*cos(q4))*cos(q6) + (-sin(q2)*cos(q4) + sin(q4)*cos(q2))*sin(q6)*cos(q5),                                                                -0.0823*(-sin(q2)*cos(q4) + sin(q4)*cos(q2))*sin(q5) + 0.09465*sin(q2)*sin(q4) + 0.09465*cos(q2)*cos(q4) + 0.089159],\n",
+       "[                                                                                                                                                     0,                                                                              0,                                                                                                                                                      0,                                                                                                                                                                                  1]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T = (T0*T1*T2*T3*T4*T5*T6)\n",
+    "\n",
+    "T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transformation at start position:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}-1.74523786614818 \\cdot 10^{-5} & -0.999999999695393 & -1.74535971126676 \\cdot 10^{-5} & 0.0268483480543087\\\\-5.23601821401489 \\cdot 10^{-5} & -1.74526832816749 \\cdot 10^{-5} & 0.999999998476908 & 0.0946504685989643\\\\-0.999999998476913 & 1.7453292508424 \\cdot 10^{-5} & -5.23598775333623 \\cdot 10^{-5} & 0.0891571324977001\\\\0 & 0 & 0 & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[-1.74523786614818e-5,   -0.999999999695393, -1.74535971126676e-5, 0.0268483480543087],\n",
+       "[-5.23601821401489e-5, -1.74526832816749e-5,    0.999999998476908, 0.0946504685989643],\n",
+       "[  -0.999999998476913,   1.7453292508424e-5, -5.23598775333623e-5, 0.0891571324977001],\n",
+       "[                   0,                    0,                    0,                  1]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q = sp.Matrix([ [math.radians(90.001)], [math.radians(0.001)], [math.radians(-90.001)], [math.radians(0.001)], [math.radians(0.001)],  [math.radians(0.001)]])\n",
+    "Tstart = T.subs({q1: q[0], q2: q[1], q4: q[2], q5: q[3], q6: q[4], q7: q[5] })\n",
+    "Tstart"
    ]
   },
   {
@@ -109,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +198,7 @@
        "[                                                                                                                                      1,                                                                               0,                                                                               0,                                                             0,                                                  cos(q2 + q4),                           sin(q5)*sin(q2 + q4)]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +261,7 @@
        "[                  1,                   0,                   0,                     0, -1.60812264967664e-16, -1.74532925190572e-5]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
